--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,11 @@
                         <a class="gallery__link" href="" target="_blank" rel="noopener noreferrent">
                             <div class="gallery__thumb">
                                 <img src="./images/imgposter.jpg" alt="project2" width="370" height="294" />
-                                <p class="gallery__overlay"></p>
+                                <p class="gallery__overlay">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу
+                                    отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
                             </div>
                             <div class="gallery__info">
                                 <h2 class="gallery__title">
@@ -109,7 +113,11 @@
                         <a class="gallery__link" href="" target="_blank" rel="noopener noreferrent">
                             <div class="gallery__thumb">
                                 <img src="./images/imgrestoran.jpg" alt="project3" width="370" height="294" />
-                                <p class="gallery__overlay"></p>
+                                <p class="gallery__overlay">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу
+                                    отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
                             </div>
                             <div class="gallery__info">
                                 <h2 class="gallery__title">Ресторан Seafood</h2>
@@ -121,7 +129,11 @@
                         <a class="gallery__link" href="" target="_blank" rel="noopener noreferrent">
                             <div class="gallery__thumb">
                                 <img src="./images/imgprime.jpg" alt="project4" width="370" height="294" />
-                                <p class="gallery__overlay"></p>
+                                <p class="gallery__overlay">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу
+                                    отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
                             </div>
                             <div class="gallery__info">
                                 <h2 class="gallery__title">Проєкт Prime</h2>
@@ -133,7 +145,11 @@
                         <a class="gallery__link" href="" target="_blank" rel="noopener noreferrent">
                             <div class="gallery__thumb">
                                 <img src="./images/imgboxes.jpg" alt="project5" width="370" height="294" />
-                                <p class="gallery__overlay"></p>
+                                <p class="gallery__overlay">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу
+                                    отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
                             </div>
                             <div class="gallery__info">
                                 <h2 class="gallery__title">Проєкт Boxes</h2>
@@ -145,7 +161,11 @@
                         <a class="gallery__link" href="" target="_blank" rel="noopener noreferrent">
                             <div class="gallery__thumb">
                                 <img src="./images/imginspiration.jpg" alt="project6" width="370" height="294" />
-                                <p class="gallery__overlay"></p>
+                                <p class="gallery__overlay">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу
+                                    отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
                             </div>
                             <div class="gallery__info">
                                 <h2 class="gallery__title">Inspiration has no Borders</h2>
@@ -157,7 +177,11 @@
                         <a class="gallery__link" href="" target="_blank" rel="noopener noreferrent">
                             <div class="gallery__thumb">
                                 <img src="./images/imglimitededition.jpg" alt="project7" width="370" height="294" />
-                                <p class="gallery__overlay"></p>
+                                <p class="gallery__overlay">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу
+                                    отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
                             </div>
                             <div class="gallery__info">
                                 <h2 class="gallery__title">Видання Limited Edition</h2>
@@ -169,7 +193,11 @@
                         <a href="" target="_blank" rel="noopener noreferrent" class="gallery__link" i>
                             <div class="gallery__thumb">
                                 <img src="./images/imglab.jpg" alt="project8" width="370" height="294" />
-                                <p class="gallery__overlay"></p>
+                                <p class="gallery__overlay">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу
+                                    отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
                             </div>
                             <div class="gallery__info">
                                 <h2 class="gallery__title">Проєкт LAB</h2>
@@ -181,7 +209,11 @@
                         <a class="gallery__link" href="" target="_blank" rel="noopener noreferrent">
                             <div class="gallery__thumb">
                                 <img src="./images/imggrowing.jpg" alt="project9" width="370" height="294" />
-                                <p class="gallery__overlay"></p>
+                                <p class="gallery__overlay">
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу
+                                    отримати вичерпні відомості про компанію чи приватну особу.
+                                </p>
                             </div>
                             <div class="gallery__info">
                                 <h2 class="gallery__title">Growing Business</h2>
